--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="header">
                 <p id="cityNameDisplay">Kielce</p>
                 <div id="inputContainer">
-                    <input id="userInput" type="text" placeholder="Wpisz nazwę miejscowości">
+                    <input id="userInput" type="text" placeholder="City name">
                     <button id="searchBtn">🔍</button>
                 </div>
             </div>
@@ -34,15 +34,15 @@
                     <h3 id="weatherDisplay">Deszczowo</h3>
                     <div id="cardContainer">
                         <div class="centerMidCard">
-                            <h3 id="cardTempText">🌡 Odczuwalna</h3>
+                            <h3 id="cardTempText">🌡 Feels Like</h3>
                             <h2 id="cardTemp">2°C</h2>
                         </div>
                         <div class="centerMidCard">
-                            <h3 id="cardPressureText">⏲ Cisnienie</h3>
+                            <h3 id="cardPressureText">⏲ Pressure</h3>
                             <h2 id="cardPressure">1026 hPa</h2>
                         </div>
                         <div class="centerMidCard">
-                            <h3 id="cardWindText">🏳 Wiatr</h3>
+                            <h3 id="cardWindText">🏳 Wind</h3>
                             <h2 id="cardWind">18 km/h</h2>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
             </div>
 
             <div id="nextDaysDisplay">
-                <div class="nexDayCard">
+                <!-- <div class="nexDayCard">
                     <h1>Pon</h1>
                     <h2>🌤</h2>
                     <h2>23°C</h2>
@@ -79,7 +79,7 @@
                     <h1>Pon</h1>
                     <h2>🌤</h2>
                     <h2>23°C</h2>
-                </div>
+                </div> -->
             </div>
         </div>
 
