--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="contentContainer">
 
             <div id="header">
-                <p id="cityNameDisplay">Kielce</p>
+                <p id="cityNameDisplay"></p>
                 <div id="inputContainer">
                     <input id="userInput" type="text" placeholder="City name">
                     <button id="searchBtn">🔍</button>
@@ -31,7 +31,7 @@
                     <h1 id="tempDisplay">23°C</h1>
                 </div>
                 <div id="centerMid">
-                    <h3 id="weatherDisplay">Deszczowo</h3>
+                    <h3 id="weatherDisplay"></h3>
                     <div id="cardContainer">
                         <div class="centerMidCard">
                             <h3 id="cardTempText">🌡 Feels Like</h3>
